@@ -11,6 +11,10 @@ import org.gradle.api.tasks.testing.Test
 
 fun Project.junitConfig() {
     tasks.withType(Test::class.java).configureEach {
+        jvmArgs(
+            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED"
+        )
         useJUnitPlatform {
             includeEngines("spek", "junit-jupiter", "junit-vintage")
         }
